--- a/assets/css/cadastro_produto.css
+++ b/assets/css/cadastro_produto.css
@@ -1,8 +1,8 @@
 .cadastro__descricao {
-    height: 15.75rem;
+  height: 15.75rem;
 }
 
-.cadastro__preco-container, .cadastro__descricao-container {
-    width: 50%;
+.cadastro__preco-container,
+.cadastro__descricao-container {
+  width: 50%;
 }
-
